# OneCut-StraightSkeleton

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  build_project.sh  conda_one_straight_cut.yaml  conda_versions.yaml  main.cpp  onecut_requirements.yml
bindings/: StraightSkeletonPyBind.cpp  straightSkeletonPyBind.cpp
docs/: _crease_8h.html  _crease_8h.js  _crease_8h__dep__incl.map  _crease_8h__dep__incl.md5  _crease_8h__incl.map  _crease_8h__incl.md5  _crease_8h_source.html  _fold_manager_8h.html  _fold_manager_8h__dep__incl.map  _fold_manager_8h__dep__incl.md5  _fold_manager_8h__incl.map  _fold_manager_8h__incl.md5  _fold_manager_8h_source.html  _geometry_util_8h.html  _geometry_util_8h__dep__incl.map  _geometry_util_8h__dep__incl.md5  _geometry_util_8h__incl.map  _geometry_util_8h__incl.md5  _geometry_util_8h_source.html  _i_skeleton_face_8h.html  _i_skeleton_face_8h.js  _i_skeleton_face_8h__dep__incl.map  _i_skeleton_face_8h__dep__incl.md5  _i_skeleton_face_8h__incl.map  _i_skeleton_face_8h__incl.md5  _i_skeleton_face_8h_source.html  _i_straight_skeleton_8h.html  _i_straight_skeleton_8h__dep__incl.map  _i_straight_skeleton_8h__dep__incl.md5  _i_straight_skeleton_8h__incl.map  _i_straight_skeleton_8h__incl.md5  _i_straight_skeleton_8h_source.html  _intersection_util_8h.html  _intersection_util_8h__dep__incl.map  _intersection_util_8h__dep__incl.md5  _intersection_util_8h__incl.map  _intersection_util_8h__incl.md5  _intersection_util_8h_source.html  _perpendicular_demo_8cpp.html  _perpendicular_demo_8cpp.js  (+133 more)
docs/html/: class_exact_kernel_point.html  class_one_cut_1_1_fold_manager-members.html  class_one_cut_1_1_i_skeleton_face-members.html  class_one_cut_1_1_i_skeleton_face__inherit__graph.map  class_one_cut_1_1_i_straight_skeleton.html  class_one_cut_1_1_intersection_util-members.html  class_one_cut_1_1_placeholder_skeleton-members.html  class_one_cut_1_1_placeholder_skeleton__coll__graph.map  class_one_cut_1_1_skeleton_face__coll__graph.map  class_one_cut_1_1_skeleton_face__coll__graph.md5  class_one_cut_1_1_straight_skeleton.html  class_skeleton_builder.html  classes.html  deprecated.html  dir_000000_000002.html  dir_000001_000002.html  dir_000003_000004.html  dir_00240dc4a1a4845ae58be68fbad02d02.html  dir_a3eb76ee039327011523c3e9bc867aa0.html  dir_a3eb76ee039327011523c3e9bc867aa0_dep.md5  dir_d28a4824dc47e487b107a5db32ef43c4.html  dir_d28a4824dc47e487b107a5db32ef43c4_dep.map  dir_d28a4824dc47e487b107a5db32ef43c4_dep.md5  dir_d44c64559bbebec7f509842c48db8b23.html  dir_d44c64559bbebec7f509842c48db8b23_dep.md5  dir_d77790ef1b8831c3abc4763b3567a5f5_dep.md5  functions.html  functions_func.html  globals.html  graph_legend.html  hierarchy.html  index.html  inherit_graph_0.md5  inherit_graph_1.md5  inherit_graph_10.md5  inherit_graph_11.map  inherit_graph_12.md5  inherit_graph_13.map  inherit_graph_13.md5  inherit_graph_2.map  (+14 more)
docs/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  enums_0.js  enums_1.js  enumvalues_0.js  enumvalues_1.js  enumvalues_2.js  enumvalues_3.js  enumvalues_4.js  files_0.js  files_1.js  files_2.js  files_3.js  files_4.js  files_6.js  (+38 more)
examples/: ClosestPairDemo.cpp  PerpendicularDemo.cpp  SkeletonBuilderDemo.cpp
extra/gui/: folding_manager.py  intersection_helper.py  main.py  polygon_drawer.py  polygon_model.py
extra/visualization/: PolygonDrawer.py  Visualization.py
include/: perpendicularGraph.h
include/OneCut/: Crease.h  FoldManager.h  ISkeletonFace.h  IStraightSkeleton.h  PerpendicularFinder.h  PlaceholderSkeleton.h  SkeletonBuilder.h  SkeletonFace.h  StraightSkeleton.h  StraightSkeletonTypes.h
include/StraightSkeleton/: MinHeapTriangleRay.h  doublyConnectedEdgeList.h  folding.h  graphUtils.h  perpendicularGraph.h  polygon.h  straightSkeleton.h
include/straight_skeleton/: ClosestPair.h  CollisionManager.h  Crease.h  EuclideanDistance.h  Event.h  EventQueue.h  FoldManager.h  Folding.h  GraphClassification.h  GraphUtils.h  IClosestPair.h  IDataStructure.h  ILowestIntersectionQuery.h  IRayShootingQuery.h  ISkeletonFace.h  IStraightSkeleton.h  NaiveLowestIntersectionQuery.h  NaiveRayShootingQuery.h  PerpendicularFinder.h  PerpendicularGraph.h  PlaceholderSkeleton.h  PolygonData.h  Ray.h  SkeletonBuilder.h  SkeletonFace.h  StraightSkeleton.h  StraightSkeletonTypes.h  TestStraightSkeleton.h  Triangle.h
python/gui/: app.py  folding_manager.py  main.py  (+5 more)
resources/: cut_graph_test.fold  edge_event.fold  heart.fold  oripa_test.fold  simple.fold  vertex_event.fold
scripts/: build_project.sh  run_tests.sh
src/: ClosestPair.cpp  CollisionManager.cpp  Event.cpp  EventHeap.cpp  EventQueue.cpp  FoldManager.cpp  Folding.cpp  GeometryUtil.cpp  GraphUtils.cpp  IntersectionUtil.cpp  MinHeapTriangleRay.cpp  NaiveClosestPair.cpp  NaiveLowestIntersectionQuery.cpp  NaiveRayShootingQuery.cpp  PerpendicularFinder.cpp  PerpendicularGraph.cpp  PlaceholderSkeleton.cpp  Polygon.cpp  Ray.cpp  RayTriangleUtil.cpp  SkeletonBuilder.cpp  SkeletonEventRay.cpp  SkeletonEventTriangle.cpp  SkeletonFace.cpp  SkeletonGeometryUtil.cpp  StraightSkeleton.cpp  TestStraightSkeleton.cpp  Triangle.cpp  doublyConnectedEdgeList.cpp  folding.cpp  graphUtils.cpp  perpendicularGraph.cpp  polygon.cpp  straightSkeleton.cpp
tests/: BasicSkeletonPerpendicularTest.cpp  EventQueueTest.cpp  EventTest.cpp  FoldingTest.cpp  GeometryUtilTest.cpp  GraphUtilsTest.cpp  IntersectionUtilTest.cpp  MinHeapTriangleRayTest.cpp  NaiveClosestPairTest.cpp  NaiveLowestIntersectionQueryTest.cpp  NaiveRayShootingQueryTest.cpp  PerpendicularFinderTest.cpp  PerpendicularTest.cpp  RayTest.cpp  RayTriangleUtilTest.cpp  SkeletonBuilderTest.cpp  SkeletonEventRayTest.cpp  SkeletonEventTriangleTest.cpp  SkeletonGeometryUtilTest.cpp  StraightSkeletonTest.cpp  TriangleTest.cpp  folding_test.cpp  graphutils_test.cpp  perpendicular_test.cpp  simple_test.cpp
(+27 files in other folders)
